[tool.poetry]
name = "issue"
version = "0.1.0"
description = ""
authors = ["Fabien Le Frapper <contact@fabienlefrapper.me>"]

[tool.poetry.dependencies]
python = "^3.9"
wagtail = "^2.15.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
